--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -55,6 +55,7 @@
   display: block;
   text-align: left;
   font-family: BrandonGrotesque-Black, sans-serif;
+  font-weight: 700;
   font-style: normal;
   font-size: 46px;
   color: #ffb29d;
