--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@font-face {
+  font-family: "BrandonGrotesque-Black";
+  src: local("BrandonGrotesque-Black"),
+    url(./fonts/Brandon_blk.otf) format("truetype");
+}
+
+@font-face {
+  font-family: "GoogleSans-Regular";
+  src: local("GoogleSans-Regular"),
+    url(./fonts/GoogleSans-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "GoogleSans-Bold";
+  src: local("GoogleSans-Bold"),
+    url(./fonts/GoogleSans-Bold.ttf) format("truetype");
 }
