--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,54 +1,77 @@
 .landing-container {
-  width: 90%;
+  align-items: center;
+  height: 40vw;
+  justify-content: center;
+  margin-bottom: 5px;
   display: flex;
   flex-direction: row;
 }
 
 .landing-text {
-  width: 60%;
+  width: 30vw;
   height: 250px;
-  margin-top: 210px;
-  margin-left: 10%;
-  display: block;
+  margin: 120px 5% 5% 8%;
 }
 
 .text {
-  display: inline-block;
   padding-left: 5%;
   width: 80%;
 }
 
 .icon {
-  margin-right: 10%;
-  display: inline-block;
-  align-content: center;
-  padding-right: 20px;
-  height: 50%;
-  width: 50%;
+  align-items: center;
+  height: inherit;
+  justify-content: center;
+  width: 40%;
+  @media (max-width: 899px) {
+    display: none;
+  }
+}
+
+@media (max-width: 799px) {
+  .landing-container {
+    display: none;
+  }
 }
 
 .icon-background {
-  position: absolute;
-  top: 27%;
-  left: 680px;
-  width: 42%;
+  height: 25vw;
+  margin-top: 100px;
   z-index: -1;
 }
 
 .icon-body {
-  position: absolute;
-  width: 18%;
-  top: 35%;
-  left: 850px;
+  height: 25vw;
+  position: relative;
+  /* position: absolute;
+  width: 18%; */
+  margin-top: -70%;
+  margin-left: 40%;
 }
 
 .laptop {
   position: absolute;
-  width: 12%;
-  top: 60%;
-  left: 780px;
-  margin-left: auto;
-  margin-right: auto;
+  height: 7vw;
+  top: calc(46vw * 0.5);
+  left: 63vw;
+}
+
+@media (max-width: 1400px) {
+  .laptop {
+    top: calc(53vw * 0.5);
+  }
+}
+
+@media (max-width: 1050px) {
+  .laptop {
+    top: calc(63vw * 0.5);
+  }
+}
+
+@media (max-width: 900px) {
+  .laptop {
+    top: calc(68vw * 0.5);
+  }
 }
 
 .Hello {
