--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -86,3 +86,18 @@
 .letseat:hover {
   color: #ff8383;
 }
+
+@media (max-width: 799px) {
+  .about-body {
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 0;
+  }
+  .about-text {
+    width: 80%;
+  }
+  .About-title {
+    margin: 30px 0 0 0;
+    text-align: center;
+  }
+}
